0.6/_sources/api/generated/deepchecks.core.CheckResult.rst.txt

CheckResult
===========



.. currentmodule:: deepchecks.core

.. autoclass:: CheckResult
   :special-members: __init__



.. rubric:: Attributes

.. autosummary::
   :toctree:

   
   CheckResult.priority
   

   
   CheckResult.value
   

   
   CheckResult.header
   

   
   CheckResult.display
   

   
   CheckResult.conditions_results
   

   
   CheckResult.check
   






.. rubric:: Methods

.. autosummary::
   :toctree:

   
   
   CheckResult.display_check
   
   
   CheckResult.from_json
   
   
   CheckResult.get_check_id
   
   
   CheckResult.get_header
   
   
   CheckResult.get_metadata
   
   
   CheckResult.have_conditions
   
   
   CheckResult.have_display
   
   
   CheckResult.passed_conditions
   
   
   CheckResult.process_conditions
   
   
   CheckResult.save_as_html
   
   
   CheckResult.show
   
   
   CheckResult.to_json
   
   
   CheckResult.to_wandb
   
   
   CheckResult.to_widget
   






